CountSemaphore + Switch